--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-    <h1>This is Data type and Operator Tutorial</h1>
-    <script src="./datatypeoperator.js"></script>
+    <h1>Type conversion and coercion</h1>
+    <script src="./typeconversion.js"></script>
 </body>
 
 </html>
