Array,object and Function

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Main File</title>
+    <title>Javascript Learning</title>
 </head>
 
 <body>
-    <h1>Type conversion and coercion</h1>
-    <script src="./typeconversion.js"></script>
+    <h1>Array and object/h1>
+    <script src="./Array&Object/arrayobj.js"></script>
 </body>
 
 </html>
