--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-    <h1>Array and object/h1>
-    <script src="./Array&Object/arrayobj.js"></script>
+    <h1>Looping</h1>
+    <script src="./Looping/Loop.js"></script>
 </body>
 
 </html>
