--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-    <h1>Looping</h1>
-    <script src="./Looping/Loop.js"></script>
+    <h1>Looping and Events and set and map</h1>
+    <script src="./set&Map/setmap.js"></script>
 </body>
 
 </html>
