constructor and Dom javascript

--- a/index.html
+++ b/index.html
@@ -2,15 +2,44 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Javascript Learning</title>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Javascript Learning</title>
 </head>
 
 <body>
-    <h1>Looping and Events and set and map</h1>
-    <script src="./set&Map/setmap.js"></script>
+	<!-- Calling a event -->
+	<!-- <button onclick="hello()">ClickMe</button> -->
+	<!--on double click-->
+	<!-- <p ondblclick="hello()">ClickOnMe</p> -->
+	<!--For right click-->
+	<!-- <p oncontextmenu="hello()">ClickOnMe</p> -->
+	<!--When we hover a mouse-->
+	<!-- <p onmouseenter="hello()">ClickOnMe</p> -->
+	<div class="container">
+		<h1 id="heading"> Welcome to Code With Harry</h1>
+		<div id="myFirst" class="first">child 1
+			<ul id="list" class="hello">
+				<li>orange</li>
+				<li>apple</li>
+				<li>Banana</li>
+				<li>Grapes </li>
+				<li>of my dreams</li>
+			</ul>
+		</div>
+		<div class="child" id="myName">child 2</div>
+		<div class="child red">child 3</div>
+		<div class="child">child 4</div>
+		<form action="none.html" method="post">
+			<a href="//codewithharry.com">Go to Code With Harry</a>
+			<br>
+			<br>
+			Search this website: <input type="text" name="Hello" id="">
+			<input type="button" id="btn" value="submit">
+		</form>
+	</div>
+	<script src="./HtmlDOM/dom.js"></script>
 </body>
 
 </html>
