--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Scope Function</title>
 </head>
 <body>
+    <input type="text" onkeydown="myFunction()">
     <script src="./index.js"></script>
 </body>
 </html>
